scribble-test/src/test/resources/good/misc/imports/Import02.scr
//Raymond@HZHL2 ~/code/python/scribble-tools
//$ PYTHONPATH='lib/:bin/' python src/scribble/Main.py -ip test/ test/base/impourt/Import2.scr

module good.misc.imports.Import02;


import good.misc.imports.pack1.Pack02;

