scribble-test/src/test/resources/bad/syntax/disamb/imports/Import06.scr
//Raymond@HZHL2 ~/code/python/scribble-tools
//$ PYTHONPATH='lib/:bin/' python src/scribble/Main.py -ip test/ test/base/impourt/Import6.scr

// Possiblty good for testing for potential loops in recursive imports when a module is bad? -- could allow this as a special case? (import self)

module bad.parsing.imports.Import06;

import bad.parsing.imports.Import06;

